--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ziven Zhu"
   avatar           : "profile.jpg"
-  bio              : ""But man is not made for defeat. A man can be destroyed, but not defeated.""
+  bio              : ""But man is not made for defeat. A man can be destroyed, but not defeated!""
   location         : "Xi'an, Shaanxi, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
