--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ziven Zhu"
+  name             : "Zifeng Zhu"
   avatar           : "profile.jpg"
   bio              : "But man is not made for defeat. A man can be destroyed, but not defeated!"
   location         : "Xi'an, Shaanxi, China"
